--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div style="height: 100vh;width: 100vw;">
-    <div #canvas id="canvas" style="height: 100%;width: 100%;position: relative;">
-    </div>
+    <fdn-hierarch #hierarch
+        [height]="50"
+        [width]="50">
+    </fdn-hierarch>
 </div>
 
 <router-outlet></router-outlet>
